@startuml Office-AI-Agent-Database-ERD
title The Office AI Agent - Database Entity Relationship Diagram
skinparam BackgroundColor FFFFFF
skinparam shadowing false

note top
  **Database Architecture:**
  • PostgreSQL 15 (Supabase)
  • 15 tables with Row Level Security (RLS)
  • All user data isolated by user_id
  • Encrypted sensitive data (IMAP passwords)
  
  **Phase 2 Notes:**
  • No schema changes needed
  • user_context is a service-layer aggregation (not a table)
  • BaseService<T> provides generic CRUD for all tables
  • Logger tracks all database operations
end note

' ============ ENTITIES ============

entity "auth.users" as users {
    **id** : UUID <<PK>>
    --
    email : TEXT
    encrypted_password : TEXT
    email_confirmed_at : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "user_profiles" as profiles {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>> <<UNIQUE>>
    full_name : TEXT
    company : TEXT
    company_description : TEXT
    job_title : TEXT
    department : TEXT
    work_description : TEXT
    ai_context_notes : TEXT
    preferences : JSONB
    plan : TEXT (free/pro/enterprise)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "user_imap_configs" as imap_configs {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    config_name : TEXT
    imap_host : TEXT
    imap_port : INTEGER
    imap_user : TEXT
    imap_password : TEXT <<ENCRYPTED>>
    use_ssl : BOOLEAN
    is_active : BOOLEAN
    last_scan_at : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "emails_inbox" as inbox {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    message_id : TEXT <<UNIQUE>>
    from_address : TEXT
    from_name : TEXT
    to_address : TEXT
    subject : TEXT
    body_text : TEXT
    body_html : TEXT
    received_at : TIMESTAMP
    has_attachments : BOOLEAN
    attachments_count : INTEGER
    is_read : BOOLEAN
    is_starred : BOOLEAN
    ai_analyzed : BOOLEAN
    ai_priority : TEXT (urgent/high/normal/low)
    ai_category : TEXT (question/request/complaint/info/spam)
    ai_sentiment : TEXT (positive/neutral/negative)
    ai_summary : TEXT
    ai_suggested_action : TEXT (reply/forward/archive/delete)
    created_at : TIMESTAMP
}

entity "ai_email_drafts" as drafts {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *inbox_email_id : UUID <<FK>>
    to_address : TEXT
    cc_addresses : TEXT[]
    subject : TEXT
    body : TEXT
    edited_body : TEXT
    ai_confidence : FLOAT
    ai_reasoning : TEXT
    tone : TEXT (professional/friendly/formal)
    status : TEXT (pending/approved/rejected/sent)
    sent_at : TIMESTAMP
    sent_message_id : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "email_templates" as email_templates {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    name : TEXT
    category : TEXT
    subject : TEXT
    body : TEXT
    placeholders : JSONB
    usage_count : INTEGER
    is_active : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "emails_sent" as emails_sent {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    recipient : TEXT
    subject : TEXT
    body : TEXT
    status : TEXT (pending/sent/failed)
    error_message : TEXT
    message_id : TEXT
    sent_at : TIMESTAMP
    created_at : TIMESTAMP
}

entity "email_scan_logs" as scan_logs {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *imap_config_id : UUID <<FK>>
    scan_started_at : TIMESTAMP
    scan_completed_at : TIMESTAMP
    emails_found : INTEGER
    emails_new : INTEGER
    emails_processed : INTEGER
    status : TEXT (running/completed/failed)
    error_message : TEXT
}

entity "pdf_templates" as pdf_templates {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    name : TEXT
    category : TEXT
    content_template : TEXT
    placeholders : JSONB
    usage_count : INTEGER
    is_active : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "pdf_files" as pdf_files {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    title : TEXT
    filename : TEXT
    file_path : TEXT
    file_size : INTEGER
    storage_url : TEXT
    created_at : TIMESTAMP
}

entity "scrape_jobs" as scrape_jobs {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    name : TEXT
    url : TEXT
    scrape_type : TEXT (manual/ai)
    selectors : JSONB
    ai_prompt : TEXT
    schedule : TEXT (cron expression)
    enabled : BOOLEAN
    status : TEXT (pending/running/completed/failed)
    last_run : TIMESTAMP
    next_run : TIMESTAMP
    execution_count : INTEGER
    alert_enabled : BOOLEAN
    alert_conditions : JSONB
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "scrape_history" as scrape_history {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    *scrape_job_id : UUID <<FK>>
    result_data : JSONB
    changes_detected : JSONB
    status : TEXT (success/failed)
    error_message : TEXT
    execution_time_ms : INTEGER
    scraped_at : TIMESTAMP
}

entity "cron_jobs" as cron_jobs {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    name : TEXT
    description : TEXT
    schedule : TEXT (cron expression)
    task_type : TEXT (email/pdf/scraper)
    task_config : JSONB
    enabled : BOOLEAN
    status : TEXT (pending/running/completed/failed)
    last_run : TIMESTAMP
    next_run : TIMESTAMP
    last_result : TEXT
    last_error : TEXT
    execution_count : INTEGER
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "chat_messages" as chat {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    role : TEXT (user/assistant)
    content : TEXT
    created_at : TIMESTAMP
}

entity "notifications" as notifications {
    **id** : UUID <<PK>>
    --
    *user_id : UUID <<FK>>
    type : TEXT
    title : TEXT
    message : TEXT
    link : TEXT
    priority : TEXT (low/normal/high/urgent)
    is_read : BOOLEAN
    read_at : TIMESTAMP
    created_at : TIMESTAMP
}

' ============ RELATIONSHIPS ============

users ||--o{ profiles : "has profile"
users ||--o{ imap_configs : "has configs"
users ||--o{ inbox : "receives emails"
users ||--o{ drafts : "creates drafts"
users ||--o{ email_templates : "has templates"
users ||--o{ emails_sent : "sends emails"
users ||--o{ scan_logs : "has scan logs"
users ||--o{ pdf_templates : "has PDF templates"
users ||--o{ pdf_files : "generates PDFs"
users ||--o{ scrape_jobs : "creates scrape jobs"
users ||--o{ scrape_history : "has scrape history"
users ||--o{ cron_jobs : "schedules jobs"
users ||--o{ chat : "has conversations"
users ||--o{ notifications : "receives notifications"

inbox ||--o{ drafts : "generates drafts"
imap_configs ||--o{ scan_logs : "tracked by"
scrape_jobs ||--o{ scrape_history : "has history"

' ============ INDEXES (shown as notes) ============

note right of profiles
    **Indexes:**
    • user_id (UNIQUE)
    
    **RLS Policy:**
    • Users can only access own profile
end note

note right of imap_configs
    **Indexes:**
    • user_id
    • user_id + is_active
    
    **Security:**
    • Passwords encrypted with AES-256
    • Decrypted only in backend memory
    
    **RLS Policy:**
    • Users can only access own configs
end note

note right of inbox
    **Indexes:**
    • user_id
    • message_id (UNIQUE)
    • user_id + created_at (DESC)
    • user_id + ai_priority
    • user_id + is_read
    
    **RLS Policy:**
    • Users can only see own emails
end note

note right of drafts
    **Indexes:**
    • user_id
    • inbox_email_id
    • user_id + status
    
    **RLS Policy:**
    • Users can only access own drafts
end note

note right of scrape_jobs
    **Indexes:**
    • user_id
    • user_id + enabled
    • next_run (for scheduler)
    
    **Features:**
    • AI-powered scraping
    • Scheduled execution
    • Change detection
    • Alert system
end note

note right of scrape_history
    **Indexes:**
    • scrape_job_id
    • user_id + scraped_at (DESC)
    
    **Retention:**
    • Keep last 100 runs per job
end note

note right of cron_jobs
    **Indexes:**
    • user_id
    • user_id + enabled
    • next_run (for scheduler)
    
    **Task Types:**
    • email: Send scheduled emails
    • pdf: Generate scheduled PDFs
    • scraper: Run scheduled scraping
end note

note right of chat
    **Indexes:**
    • user_id + created_at (DESC)
    
    **Features:**
    • Conversation history
    • Tool execution tracking
    • AI context preservation
end note

' ============ LEGEND ============

legend right
  |= Symbol |= Meaning |
  | **field** | Primary Key |
  | *field | Foreign Key |
  | <<ENCRYPTED>> | Encrypted data |
  | JSONB | JSON Binary (flexible schema) |
  
  **Database Engine:** PostgreSQL 15
  **Hosting:** Supabase (managed)
  **Features:**
  • Row Level Security (RLS)
  • Real-time subscriptions
  • Full-text search ready
  • Automatic timestamps
  • UUID primary keys
  
  **Total Tables:** 16
  **Multi-tenant:** Yes (user_id in all tables)
endlegend

' ============ STORAGE BUCKETS ============

package "Supabase Storage" {
    folder "pdf-files" {
        note right: Generated PDF documents\nPublic/Private access control
    }
    
    folder "email-attachments" {
        note right: Email attachment files\nPrivate access only
    }
}

pdf_files --> "pdf-files" : stored in
inbox --> "email-attachments" : attachments in

@enduml
